--- a/confd/nginx.conf
+++ b/confd/nginx.conf
@@ -40,7 +40,7 @@ http {
         #access_log  logs/host.access.log  main;
 
         location / {
-            root srv/nginx/webapp;
+            root /srv/nginx/webapp;
             index index.html index.htm;
             expires -1;
         }
