--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/router": "~13.3.0",
     "bootstrap": "^4.6.1",
     "ng2-file-upload": "^1.4.0",
+    "ngx-cookie": "^6.0.0",
+    "ngx-spinner": "^13.1.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
