--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "angular2-signaturepad": "^4.0.2",
     "bootstrap": "^4.6.1",
     "ng2-file-upload": "^1.4.0",
     "ngx-cookie": "^6.0.0",
