--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "angular2-signaturepad": "^4.0.2",
     "bootstrap": "^4.6.1",
     "ng2-file-upload": "^1.4.0",
+    "ng2-pdf-viewer": "^7.0.2",
     "ngx-cookie": "^6.0.0",
+    "ngx-extended-pdf-viewer": "^14.5.0",
     "ngx-spinner": "^13.1.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
